[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/floors/tavern/tavern.png" type="Texture" id=1]
[ext_resource path="res://Player_Overworld.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://Card.tscn" type="PackedScene" id=4]
[ext_resource path="res://HoverPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://OverworldUI.gd" type="Script" id=6]
[ext_resource path="res://assets/art/floors/furniture/table_small.png" type="Texture" id=7]
[ext_resource path="res://StarterDeckTable.gd" type="Script" id=8]
[ext_resource path="res://Tavern.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 5.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 3.5 )

[node name="Tavern" type="Node2D"]
script = ExtResource( 9 )

[node name="FloorSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 4, 201, 51, 201, 51, 198, 124, 198, 124, 261, 74, 261, 74, 270, 128, 270, 128, 142, 0, 142, 0, 270, 55, 270, 55, 261, 4, 261 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 87.5, 204.5 )
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 84, 202 )

[node name="Player_Overworld" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -20, 59 )

[node name="NPC" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 15, 0 )

[node name="NPC2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -48, 9 )
npc_type = "wizard"
deck_list = [ "057", "057", "013", "024", "028" ]
health_points = 50
flip_h = true

[node name="OverworldUI" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="StartingSuitChoice" type="Node2D" parent="OverworldUI"]
visible = false

[node name="Card1" parent="OverworldUI/StartingSuitChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 110, 90 )
card_id = "001"

[node name="Card2" parent="OverworldUI/StartingSuitChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 175, 90 )
card_id = "014"

[node name="Card3" parent="OverworldUI/StartingSuitChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 240, 90 )
card_id = "027"

[node name="Card4" parent="OverworldUI/StartingSuitChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 305, 90 )
card_id = "040"

[node name="RewardCardChoice" type="Node2D" parent="OverworldUI"]
visible = false

[node name="Reward1" parent="OverworldUI/RewardCardChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 142, 90 )
card_id = "001"

[node name="Reward2" parent="OverworldUI/RewardCardChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 207, 90 )
card_id = "001"

[node name="Reward3" parent="OverworldUI/RewardCardChoice" groups=["choices"] instance=ExtResource( 4 )]
position = Vector2( 272, 90 )
card_id = "001"

[node name="HoverPanel" parent="OverworldUI" instance=ExtResource( 5 )]

[node name="StarterDeckTable" type="StaticBody2D" parent="."]
position = Vector2( 20, 235 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="StarterDeckTable"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarterDeckTable"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="StarterDeckTable"]
position = Vector2( -0.5, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarterDeckTable/Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )
